--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>ClockClock24 - jQuery</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
