--- a/index.html
+++ b/index.html
@@ -7,16 +7,15 @@
 </head>
 <body>
 <div id="container">
+
     <div class="grid-wrapper">
         <div class="clock _1">
-
             <div class="hand smallhand">
                 <div class="small"></div>
             </div>
             <div class="hand bighand">
                 <div class="big"></div>
             </div>
-
         </div>
         <div class="clock _2">
         </div>
@@ -48,6 +47,7 @@
         <div class="clock _23"></div>
         <div class="clock _24"></div>
     </div>
+    <div class="title"><span>Clock Clock 24</span></div>
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
